--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,4 +1,42 @@
+body {
+  background: #0ac2d2; }
+
+/******
+GENERAL
+******/
+.container {
+  margin-top: 3rem;
+  padding: 4.5rem 0; }
+
 .logo {
-  margin-top: 4.5rem;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: "Lato", Calibri, Arial, sans-serif;
+  color: white;
+  text-align: center;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 6px;
+  word-spacing: 1rem; }
+
+.button-link {
+  background: white;
+  color: darkgray;
+  padding: 1rem 3rem;
+  margin: 1rem; }
+
+/******
+STEP 1
+******/
+.step-1 {
   text-align: center; }
+  .step-1 form .input-field {
+    margin: 0 auto;
+    text-align: right;
+    padding: 2rem 2rem;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1); }
+  .step-1 .input-symbol-euro {
+    position: relative; }
+  .step-1 .input-symbol-euro:after {
+    position: absolute;
+    top: 0;
+    content: "$";
+    left: 1rem; }
