--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,7 +1,62 @@
-$serif-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$sans-serif-font: 'Lato', Calibri, Arial, sans-serif;
+
+body {
+	background: #0ac2d2;
+}
+
+/******
+GENERAL
+******/
+
+.container {
+	margin-top: 3rem;
+	padding: 4.5rem 0;
+}
 
 .logo {
-	margin-top: 4.5rem;
-	font-family: $serif-font;
+	font-family: $sans-serif-font;
+	color: white;
 	text-align: center;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: 6px;
+    word-spacing: 1rem;
 }
+
+.button-link {
+	background: white;
+	color: darkgray;
+	padding: 1rem 3rem;
+	margin: 1rem;
+}
+
+/******
+STEP 1
+******/
+
+
+.step-1 {
+	text-align:center;
+	
+	form {
+		.input-field {
+			margin: 0 auto;
+			text-align: right;
+			padding:2rem 2rem;
+			box-shadow: 0 3px 0 rgba(0,0,0,0.1);
+		}	
+	}	
+
+	.input-symbol-euro {
+	 	position: relative;
+	}
+
+	.input-symbol-euro:after {
+	 	position: absolute;
+	 	top: 0;
+	 	content: "$";
+	 	left: 1rem;
+	}
+}
+
+
