renamed partials and created function for rebalancing allotments

--- a/client/partials/one.html
+++ b/client/partials/one.html
@@ -5,5 +5,5 @@
     		<input type="number" class="input-field" value="1000" min="1" ng-model="principal"/>
 		</span>
 	</form>
-	<a href="#/step2" class="button-link">NEXT</a>
+	<a href="#/two" class="button-link">NEXT</a>
 </div>
