--- a/client/partials/one.html
+++ b/client/partials/one.html
@@ -1,9 +1,18 @@
-<div class="col-md-4 col-md-offset-4 step-1">
-	<p>How much principal are you working with?</p>
-	<form>
-		<span class="input-symbol-euro">
-    		<input type="number" class="input-field" value="1000" min="1" ng-model="principal"/>
+<div class="row">
+	<div class="col s6 offset-s3 step">
+		<p class="flow-text">How much principal are you working with?</p>
+		<form>
+			<span class="input-symbol-dollar">
+	    		<input type="number" class="input-field" value="1000" min="1" ng-model="principal"/>
+			</span>
+		</form>
+		
+			
+		<p class="flow-text">How much commission do you need to pay on each trade?</p>
+		<span class="input-symbol-dollar">
+			<input type="number" name="" class="input-field" placeholder="Commission">
 		</span>
-	</form>
-	<a href="#/two" class="button-link">NEXT</a>
+		
+		<a href="#/two" class="waves-effect waves-light btn">NEXT</a>
+	</div>
 </div>
