--- a/client/partials/two.html
+++ b/client/partials/two.html
@@ -1,16 +1,20 @@
-<div class="col-md-4 col-md-offset-4 step-1">
-
-
-	<form>
-		<p>VTI</p>
-		<input type="range" ng-change="checkPercentTotalAndRebalance(percentVti)" max="100" step="1" ng-model="percentVti">
-		<p>{{percentVti}}%</p>
-		<p>VXUS</p>
-		<input type="range" ng-change="checkPercentTotalAndRebalance(percentVxus)" max="100" step="1" ng-model="percentVxus">
-		<p>{{percentVxus}}%</p>
-		<p>BND</p>
-		<input type="range" ng-change="checkPercentTotalAndRebalance(percentBnd)" max="100" step="1" ng-model="percentBnd">
-		<p>{{percentBnd}}%</p>
-	</form>
-	<a href="#/"><button class="btn btn-primary"> <- Back</button></a>
+<div class="row">
+	<div class="col s8 offset-s2 step">
+		
+		<p class="flow-text">What is your allocation for each fund?</p>
+		<form>
+			<p class="flow-text">VTI</p>
+			<input type="range" ng-change="checkPercentTotalAndRebalance(percentVti)" max="100" step="1" ng-model="percentVti">
+			<p class="flow-text">{{percentVti}}% - ${{principal * (percentVti/100)}}</p>
+			<p class="flow-text">VXUS</p>
+			<input type="range" ng-change="checkPercentTotalAndRebalance(percentVxus)" max="100" step="1" ng-model="percentVxus">
+			<p class="flow-text">{{percentVxus}}% - ${{principal * (percentVxus/100)}}</p>
+			<p class="flow-text">BND</p>
+			<input type="range" ng-change="checkPercentTotalAndRebalance(percentBnd)" max="100" step="1" ng-model="percentBnd">
+			<p class="flow-text">{{percentBnd}}% - ${{principal * (percentBnd/100)}}</p>
+		</form>
+		<a href="#/"><button class="waves-effect waves-light btn">Back</button></a>
+		<a href="#/three"><button class="waves-effect waves-light btn">NEXT</button></a>
+		
+	</div>
 </div>
