working on services

--- a/client/partials/one.html
+++ b/client/partials/one.html
@@ -3,7 +3,7 @@
 		<p class="flow-text">How much principal are you working with?</p>
 		<form>
 			<span class="input-symbol-dollar">
-	    		<input type="number" class="input-field" value="1000" min="1" ng-model="principal"/>
+	    		<input type="number" class="input-field" min="1" ng-model="principal"/>
 			</span>
 		</form>
 		
@@ -13,6 +13,6 @@
 			<input type="number" name="" class="input-field" placeholder="Commission">
 		</span>
 		
-		<a href="#/two" class="waves-effect waves-light btn">NEXT</a>
+		<a href="#/two" ng-click="setPrincipal(principal)" class="waves-effect waves-light btn">NEXT</a>
 	</div>
 </div>
