--- a/client/partials/two.html
+++ b/client/partials/two.html
@@ -14,7 +14,7 @@
 			<p class="flow-text">{{percentBnd}}% - ${{principal * (percentBnd/100)}}</p>
 		</form>
 		<a href="#/"><button class="waves-effect waves-light btn">Back</button></a>
-		<a href="#/three"><button class="waves-effect waves-light btn">NEXT</button></a>
+		<a href="#/three" ng-click="setPercents(percentVti, percentVxus, percentBnd)"><button class="waves-effect waves-light btn">NEXT</button></a>
 		
 	</div>
 </div>
