--- a/client/partials/one.html
+++ b/client/partials/one.html
@@ -1,4 +1,7 @@
-<div class="row">
+<h1 class="logo">3-Fund Calculator</h1>
+<div class="container">
+
+	<div class="row">
 	<div class="col s6 offset-s3 step">
 		<p class="flow-text">How much principal are you working with?</p>
 		<form>
@@ -10,9 +13,10 @@
 			
 		<p class="flow-text">How much commission do you need to pay on each trade?</p>
 		<span class="input-symbol-dollar">
-			<input type="number" name="" class="input-field" placeholder="Commission">
+			<input type="number" name="" class="input-field" placeholder="Commission" ng-model="commission">
 		</span>
 		
-		<a href="#/two" ng-click="setPrincipal(principal)" class="waves-effect waves-light btn">NEXT</a>
+		<a href="#/two" ng-click="setPrincipal(principal); setCommission(commission)" class="waves-effect waves-light btn">NEXT</a>
+	</div>
 	</div>
 </div>
