--- a/client/partials/three.html
+++ b/client/partials/three.html
@@ -1,22 +1,28 @@
-<div class="col s6 offset-s3 step">
+<h1 class="logo">3-Fund Calculator</h1>
+<div class="container">
+	<div class="col s6 offset-s3 step">
 	
 	<div class="row">
 		<div class="col s4">
 			<h4>VTI</h4>
-			<p class="flow-text">{{percentVti}}%</p>
-			<p class="flow-text">Last Price: {{funds.vti}}</p>
+			<p class="flow-text">${{cashVti}}</p>
+			<p class="flow-text">Price Per Share: <br/> ${{funds.vti}}</p>
+			<p class="flow-text">Number of shares to purchase: {{Math.floor((cashVti - commission) / funds.vti)}}</p>
 		</div>
 		<div class="col s4">
 			<h4>VXUS</h4>
-			<p class="flow-text">{{percentVxus}}%</p>
-			<p class="flow-text">Last Price: {{funds.vxus}}</p>
+			<p class="flow-text">${{cashVxus}}</p>
+			<p class="flow-text">Price Per Share: <br/> ${{funds.vxus}}</p>
+			<p class="flow-text">Number of shares to purchase: {{Math.floor((cashVxus - commission) / funds.vxus)}}</p>
 		</div>
 		<div class="col s4">
 			<h4>BND</h4>
-			<p class="flow-text">{{percentBnd}}%</p>
-			<p class="flow-text">Last Price: {{funds.bnd}}</p>
+			<p class="flow-text">${{cashBnd}}</p>
+			<p class="flow-text">Price Per Share: <br/> ${{funds.bnd}}</p>
+			<p class="flow-text">Number of shares to purchase: {{Math.floor((cashBnd - commission) / funds.bnd)}}</p>
 		</div>
 	</div>
 	
 	<a href="#/two"><button class="waves-effect waves-light btn">Back</button></a>
+	</div>
 </div>
