--- a/client/partials/two.html
+++ b/client/partials/two.html
@@ -1,4 +1,6 @@
-<div class="row">
+<h1 class="logo">3-Fund Calculator</h1>
+<div class="container">
+	<div class="row">
 	<div class="col s8 offset-s2 step">
 		
 		<p class="flow-text">What is your allocation for each fund?</p>
@@ -14,7 +16,8 @@
 			<p class="flow-text">{{percentBnd}}% - ${{principal * (percentBnd/100)}}</p>
 		</form>
 		<a href="#/"><button class="waves-effect waves-light btn">Back</button></a>
-		<a href="#/three" ng-click="setPercents(percentVti, percentVxus, percentBnd)"><button class="waves-effect waves-light btn">NEXT</button></a>
+		<a href="#/three" ng-click="setPercents(percentVti, percentVxus, percentBnd); setCash(percentVti, percentVxus, percentBnd, principal)"><button class="waves-effect waves-light btn">NEXT</button></a>
 		
 	</div>
-</div>
+	</div>
+</div>	
