animations are working now

--- a/client/partials/three.html
+++ b/client/partials/three.html
@@ -23,6 +23,6 @@
 		</div>
 	</div>
 	
-	<a href="#/two"><button class="waves-effect waves-light btn">Back</button></a>
+	<a href="#/two" ng-click="setPageDirection(false)"><button class="waves-effect waves-light btn">Back</button></a>
 	</div>
 </div>
