--- a/client/css/main.css
+++ b/client/css/main.css
@@ -14,9 +14,6 @@ html {
   width:100%; 
 }
 
-
-
-
 /******
 STEP 1
 ******/
@@ -56,45 +53,34 @@ h1.logo {
   text-align: center;
   padding: 1rem 0; }
 
-.page-one.ng-leave        {
+.forward.ng-leave        {
   -webkit-animation:slideOutLeft 0.5s both ease-in;
   -moz-animation:slideOutLeft 0.5s both ease-in;
   animation:slideOutLeft 0.5s both ease-in;   
 }
-.page-one.ng-enter    {  
+.forward.ng-enter    {  
   -webkit-animation:slideInRight 0.5s both ease-in;
   -moz-animation:slideInRight 0.5s both ease-in;
   animation:slideInRight 0.5s both ease-in;    
+}
+
+.backward.ng-leave        {
+  -webkit-animation:slideOutRight 0.5s both ease-in;
+  -moz-animation:slideOutRight 0.5s both ease-in;
+  animation:slideOutRight 0.5s both ease-in;   
+}
+.backward.ng-enter    {  
+  -webkit-animation:slideInLeft 0.5s both ease-in;
+  -moz-animation:slideInLeft 0.5s both ease-in;
+  animation:slideInLeft 0.5s both ease-in;    
 }
 
 .page-one h1.logo{
   background: #26a69a;
 }
 
-.page-two.ng-leave        {
-  -webkit-animation:slideOutLeft 0.5s both ease-in;
-  -moz-animation:slideOutLeft 0.5s both ease-in;
-  animation:slideOutLeft 0.5s both ease-in;   
-}
-.page-two.ng-enter    {  
-  -webkit-animation:slideInRight 0.5s both ease-in;
-  -moz-animation:slideInRight 0.5s both ease-in;
-  animation:slideInRight 0.5s both ease-in;    
-}
-
 .page-two h1.logo{
   background: #B5E2FA;
-}
-
-.page-three.ng-leave        {
-  -webkit-animation:slideOutLeft 0.5s both ease-in;
-  -moz-animation:slideOutLeft 0.5s both ease-in;
-  animation:slideOutLeft 0.5s both ease-in;   
-}
-.page-three.ng-enter    {  
-  -webkit-animation:slideInRight 0.5s both ease-in;
-  -moz-animation:slideInRight 0.5s both ease-in;
-  animation:slideInRight 0.5s both ease-in;    
 }
 
 .page-three h1.logo{
@@ -115,6 +101,20 @@ h1.logo {
   to    { -webkit-transform: translateX(0); }
 }
 
+/* slide in from the left */
+@keyframes slideInLeft {
+  from  { transform:translateX(-100%); }
+  to    { transform: translateX(0); }
+}
+@-moz-keyframes slideInLeft {
+  from  { -moz-transform:translateX(-100%); }
+  to    { -moz-transform: translateX(0); }
+}
+@-webkit-keyframes slideInLeft {
+  from  { -webkit-transform:translateX(-100%); }
+  to    { -webkit-transform: translateX(0); }
+}
+
 /* slide in from the right */
 @keyframes slideOutLeft {
   to    { transform: translateX(-100%); }
@@ -124,4 +124,15 @@ h1.logo {
 }
 @-webkit-keyframes slideOutLeft {
   to    { -webkit-transform: translateX(-100%); }
+}
+
+/* slide in from the left */
+@keyframes slideOutRight {
+  to    { transform: translateX(100%); }
+}
+@-moz-keyframes slideOutRight {  
+  to    { -moz-transform: translateX(100%); }
+}
+@-webkit-keyframes slideOutRight {
+  to    { -webkit-transform: translateX(100%); }
 }
