--- a/client/partials/one.html
+++ b/client/partials/one.html
@@ -16,7 +16,7 @@
 			<input type="number" name="" class="input-field" placeholder="Commission" ng-model="commission">
 		</span>
 		
-		<a href="#/two" ng-click="setPrincipal(principal); setCommission(commission)" class="waves-effect waves-light btn">NEXT</a>
+		<a href="#/two" ng-click="setPrincipal(principal); setCommission(commission); setPageDirection(true)" class="waves-effect waves-light btn">NEXT</a>
 	</div>
 	</div>
 </div>
